reorganized file system

--- a/sample_html.html
+++ b/sample_html.html
@@ -1,29 +1,12 @@
-<div id="ember1673" class="flex-grow-1 artdeco-entity-lockup__content ember-view">
-    <div id="ember1674" class="full-width artdeco-entity-lockup__title ember-view">
-          <a data-control-id="lh/+r7Hy/7uY59Bd/EM8Ig==" tabindex="0" href="/jobs/view/3963531702/?eBP=NOT_ELIGIBLE_FOR_CHARGING&amp;refId=1PFOMt%2Fz9lhNgzOiXBog%2FA%3D%3D&amp;trackingId=lh%2F%2Br7Hy%2F7uY59Bd%2FEM8Ig%3D%3D&amp;trk=flagship3_search_srp_jobs" id="ember1675" class="disabled ember-view job-card-container__link job-card-list__title job-card-list__title--link" aria-label="Video Editor">
-              <span aria-hidden="true"><strong><!---->Video Editor<!----></strong></span><span class="visually-hidden"><!---->Video Editor<!----></span>
-          </a>
-    
-</div>
-    <div id="ember1676" class="artdeco-entity-lockup__subtitle ember-view">
-        <span class="job-card-container__primary-description ">
-          KJ Productions
-        </span>
+<div class="js-jobs-document-upload__container display-flex flex-wrap" tabindex="-1">
+  <label class="jobs-document-upload__upload-button artdeco-button artdeco-button--secondary artdeco-button--2 mt2" for="jobs-document-upload-file-input-upload-resume-urn:li:fsu_jobApplicationFileUploadFormElement:urn:li:jobs_applyformcommon_easyApplyFormElement:(3905137225,120919333,document)" tabindex="0" aria-controls="jobs-document-upload-file-input-upload-resume-urn:li:fsu_jobApplicationFileUploadFormElement:urn:li:jobs_applyformcommon_easyApplyFormElement:(3905137225,120919333,document)">
+    <span role="button" aria-label="Upload resume button. Only, DOC, DOCX, PDF formats are supported. Max file size is (2 MB).">
+      Upload resume
+    </span>
+  </label>
+  <input name="file" class="hidden" id="jobs-document-upload-file-input-upload-resume-urn:li:fsu_jobApplicationFileUploadFormElement:urn:li:jobs_applyformcommon_easyApplyFormElement:(3905137225,120919333,document)" accept="application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,application/pdf" type="file">
+  <p class="jobs-document-upload__format-text t-12 t-black--light full-width" aria-hidden="true">
+    DOC, DOCX, PDF (2 MB)
+  </p>
 
-    </div>
-
-    <div id="ember1677" class="artdeco-entity-lockup__caption ember-view">
-          <ul class="job-card-container__metadata-wrapper">
-              <li class="job-card-container__metadata-item ">
-                <!---->United States (Remote)<!---->
-              </li>
-<!---->                  </ul>
-    </div>
-        <div id="ember1678" class="mt1 t-sans t-12 t-black--light t-normal t-roman artdeco-entity-lockup__metadata ember-view">
-          <ul class="job-card-container__metadata-wrapper">
-            <li class="job-card-container__metadata-item">
-              <!---->Starting at $60K/yr<!---->
-            </li>
-          </ul>
-        </div>
-  </div>
+<!---->          </div>
