--- a/code/sample.html
+++ b/code/sample.html
@@ -363,3 +363,12 @@ Review
 </footer>
 
 </form>
+
+
+<div id="single-typeahead-entity-form-component-formElement-urn-li-jobs-applyformcommon-easyApplyFormElement-3964192191-6454790020545407151-city-HOME-CITY-ta" class="search-basic-typeahead search-vertical-typeahead">
+  <!---->        
+      
+      <input id="single-typeahead-entity-form-component-formElement-urn-li-jobs-applyformcommon-easyApplyFormElement-3964192191-6454790020545407151-city-HOME-CITY" role="combobox" aria-autocomplete="list" aria-activedescendant="" aria-expanded="false" type="text">
+    
+  <!---->  
+      </div>
