made a new rag engine and api

--- a/code/sample.html
+++ b/code/sample.html
@@ -332,7 +332,52 @@
 
 
     </div>
+<!----><!---->        <div class="jobs-easy-apply-form-section__grouping
+    ">
+    
+  <div class="fb-dash-form-element jobs-easy-apply-form-element mt4" style="width:100%" tabindex="-1" data-test-form-element="">
+<!---->        
+
+
+
+<div class="relative " data-test-single-typeahead-entity-form-component="">
+<label for="single-typeahead-entity-form-component-formElement-urn-li-jobs-applyformcommon-easyApplyFormElement-4011717482-2851511950793380041-city-HOME-CITY" class="fb-dash-form-element__label
+fb-dash-form-element__label-title--is-required" data-test-single-typeahead-entity-form-title="true">
+<span aria-hidden="true"><!---->City<!----></span><span class="visually-hidden"><!---->City<!----></span>
+</label>
+
+<!---->
+
+<div id="single-typeahead-entity-form-component-formElement-urn-li-jobs-applyformcommon-easyApplyFormElement-4011717482-2851511950793380041-city-HOME-CITY-ta" class="search-basic-typeahead search-vertical-typeahead">
+<!---->        
+
+<input id="single-typeahead-entity-form-component-formElement-urn-li-jobs-applyformcommon-easyApplyFormElement-4011717482-2851511950793380041-city-HOME-CITY" required="" role="combobox" aria-autocomplete="list" aria-activedescendant="" aria-expanded="false" type="text" aria-describedby="single-typeahead-entity-form-component-formElement-urn-li-jobs-applyformcommon-easyApplyFormElement-4011717482-2851511950793380041-city-HOME-CITY-error">
+
+<!---->  
 </div>
+
+</div>
+
+<div id="single-typeahead-entity-form-component-formElement-urn-li-jobs-applyformcommon-easyApplyFormElement-4011717482-2851511950793380041-city-HOME-CITY-error">
+<div id="ember6368" class="artdeco-inline-feedback artdeco-inline-feedback--error ember-view mt1" role="alert" data-test-form-element-error-messages="">    <li-icon aria-hidden="true" type="error-pebble-icon" class="artdeco-inline-feedback__icon" size="small"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" data-supported-dps="16x16" fill="currentColor" class="mercado-match" width="16" height="16" focusable="false">
+<path d="M10.8 1H5.2L1 5.2v5.6L5.2 15h5.6l4.2-4.2V5.2zM12 9H4V7h8z"></path>
+</svg></li-icon>
+
+<span class="artdeco-inline-feedback__message">
+
+  Please enter a valid answer
+
+<!---->  </span>
+</div>
+</div>
+
+<!---->
+<!---->
+<!---->  </div>
+
+
+    </div>
+
 
 
 <!---->
